<resources>
    <string name="app_name">foodProj</string>
    <string name="client_Id">896451803797-q0hv9n0bl9t32g0g3hubian8ea23lc2r.apps.googleusercontent.com</string>
    <string name="guest_mode_view_categories_search_and_meal_of_the_day_only">Guest mode: View categories, search, and meal of the day only</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="your_email_com">your@email.com</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="plan_your_weekly_meals_with_ease">Plan your weekly meals with ease</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="you_don_t_have_an_account_sign_up">You don’t have an account? Sign up</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="food_planner">Food Planner</string>
    <string name="already_have_account_login">Already have an account? Login</string>

    <string name="hello_blank_fragment">hello</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="logout">Logout</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="meal_of_the_day_subtitle">Get inspired for your next meal</string>
    <string name="categories">Categories</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="check_connection">Please check your connection</string>
    <string name="meals_saved">0 meals saved</string>
    <string name="no_favorites">No favorites</string>
    <string name="no_favorite_meals_yet">You haven\'t saved any meals yet</string>
    <string name="meal_image">Meal Image</string>
    <string name="category">Dessert</string>
    <string name="sample_meal">Dulce de Leche</string>
    <string name="sample_country">Argentinian</string>
    <string name="no_date_selected">No date selected</string>
    <string name="no_meals_planned">No meals planned for this date</string>
    <string name="empty">Empty</string>
    <string name="delete">Delete</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="onions">Onions</string>
    <string name="_2_chopped">2 chopped</string>
    <string name="back">Back</string>
    <string name="vegetarian_chilli">Vegetarian Chilli</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="british">British</string>
    <string name="country_flag">Country Flag</string>
    <string name="country">Country</string>
    <string name="category_image">Category Image</string>
    <string name="meal_name">Meal Name</string>


</resources>